libqt6c/src/libqaccessible.hpp

typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QAccessibleTableInterface QAccessibleTableInterface;
QAccessibleInterface* QAccessibleTableInterface_Caption(const QAccessibleTableInterface* self);
QAccessibleInterface* QAccessibleTableInterface_Summary(const QAccessibleTableInterface* self);
QAccessibleInterface* QAccessibleTableInterface_CellAt(const QAccessibleTableInterface* self, int row, int column);
int QAccessibleTableInterface_SelectedCellCount(const QAccessibleTableInterface* self);
libqt_list /* of QAccessibleInterface* */ QAccessibleTableInterface_SelectedCells(const QAccessibleTableInterface* self);
libqt_string QAccessibleTableInterface_ColumnDescription(const QAccessibleTableInterface* self, int column);
libqt_string QAccessibleTableInterface_RowDescription(const QAccessibleTableInterface* self, int row);
int QAccessibleTableInterface_SelectedColumnCount(const QAccessibleTableInterface* self);
void QAccessibleTableInterface_Delete(QAccessibleTableInterface* self);