QtBeef/src/Qt/qaccessible.bf

class QAccessibleTableInterface : IQAccessibleTableInterface
{
	private QAccessibleTableInterface_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	static void QtBf_ConnectSignals(Self obj)
	{
		CQt.ObjectHandleMap[obj.ObjectPtr] = obj;
		CQt.QAccessibleTableInterface_OnCaption(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnCaption);
		CQt.QAccessibleTableInterface_OnSummary(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnSummary);
		CQt.QAccessibleTableInterface_OnCellAt(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnCellAt);
		CQt.QAccessibleTableInterface_OnSelectedCellCount(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnSelectedCellCount);
		CQt.QAccessibleTableInterface_OnSelectedCells(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnSelectedCells);
		CQt.QAccessibleTableInterface_OnColumnDescription(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnColumnDescription);
		CQt.QAccessibleTableInterface_OnRowDescription(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnRowDescription);
		CQt.QAccessibleTableInterface_OnSelectedColumnCount(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnSelectedColumnCount);
		CQt.QAccessibleTableInterface_OnSelectedRowCount(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnSelectedRowCount);
		CQt.QAccessibleTableInterface_OnColumnCount(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnColumnCount);
		CQt.QAccessibleTableInterface_OnRowCount(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnRowCount);
		CQt.QAccessibleTableInterface_OnSelectedColumns(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnSelectedColumns);
		CQt.QAccessibleTableInterface_OnSelectedRows(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnSelectedRows);
		CQt.QAccessibleTableInterface_OnIsColumnSelected(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnIsColumnSelected);
		CQt.QAccessibleTableInterface_OnIsRowSelected(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnIsRowSelected);
		CQt.QAccessibleTableInterface_OnSelectRow(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnSelectRow);
		CQt.QAccessibleTableInterface_OnSelectColumn(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnSelectColumn);
		CQt.QAccessibleTableInterface_OnUnselectRow(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnUnselectRow);
		CQt.QAccessibleTableInterface_OnUnselectColumn(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnUnselectColumn);
		CQt.QAccessibleTableInterface_OnModelChange(obj.ObjectPtr,  => QtBeef_QAccessibleTableInterface_OnModelChange);
	}
	static void QtBeef_QAccessibleTableInterface_OnCaption(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnCaption();
	}
	static void QtBeef_QAccessibleTableInterface_OnSummary(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSummary();
	}
	static void QtBeef_QAccessibleTableInterface_OnCellAt(void* ptr, c_int row, c_int column)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnCellAt(row, column);
	}
	static void QtBeef_QAccessibleTableInterface_OnSelectedCellCount(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelectedCellCount();
	}
	static void QtBeef_QAccessibleTableInterface_OnSelectedCells(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelectedCells();
	}
	static void QtBeef_QAccessibleTableInterface_OnColumnDescription(void* ptr, c_int column)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnColumnDescription(scope .(), column);
	}
	static void QtBeef_QAccessibleTableInterface_OnRowDescription(void* ptr, c_int row)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRowDescription(scope .(), row);
	}
	static void QtBeef_QAccessibleTableInterface_OnSelectedColumnCount(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelectedColumnCount();
	}
	static void QtBeef_QAccessibleTableInterface_OnSelectedRowCount(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelectedRowCount();
	}
	static void QtBeef_QAccessibleTableInterface_OnColumnCount(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnColumnCount();
	}
	static void QtBeef_QAccessibleTableInterface_OnRowCount(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnRowCount();
	}
	static void QtBeef_QAccessibleTableInterface_OnSelectedColumns(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelectedColumns();
	}
	static void QtBeef_QAccessibleTableInterface_OnSelectedRows(void* ptr)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelectedRows();
	}
	static void QtBeef_QAccessibleTableInterface_OnIsColumnSelected(void* ptr, c_int column)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnIsColumnSelected(column);
	}
	static void QtBeef_QAccessibleTableInterface_OnIsRowSelected(void* ptr, c_int row)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnIsRowSelected(row);
	}
	static void QtBeef_QAccessibleTableInterface_OnSelectRow(void* ptr, c_int row)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelectRow(row);
	}
	static void QtBeef_QAccessibleTableInterface_OnSelectColumn(void* ptr, c_int column)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnSelectColumn(column);
	}
	static void QtBeef_QAccessibleTableInterface_OnUnselectRow(void* ptr, c_int row)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnUnselectRow(row);
	}
	static void QtBeef_QAccessibleTableInterface_OnUnselectColumn(void* ptr, c_int column)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnUnselectColumn(column);
	}
	static void QtBeef_QAccessibleTableInterface_OnModelChange(void* ptr, void** event)
	{
		let obj = CQt.ObjectHandleMap[ptr] as Self;
		obj.OnModelChange(event);
	}
	public this(QAccessibleTableInterface_Ptr ptr)
	{
		this.ptr = ptr;
		QtBf_ConnectSignals(this);
	}
	public ~this()
	{
		CQt.QAccessibleTableInterface_Delete(this.ptr);
	}
	public  virtual QAccessibleInterface_Ptr OnCaption()
	{
		return default;
	}
	public  virtual QAccessibleInterface_Ptr OnSummary()
	{
		return default;
	}
	public  virtual QAccessibleInterface_Ptr OnCellAt(c_int row, c_int column)
	{
		return default;
	}
	public  virtual c_int OnSelectedCellCount()
	{
		return default;
	}
	public  virtual void* OnSelectedCells()
	{
		return default;
	}
	public  virtual void OnColumnDescription(String outStr, c_int column)
	{
	}
	public  virtual void OnRowDescription(String outStr, c_int row)
	{
	}
	public  virtual c_int OnSelectedColumnCount()
	{
		return default;
	}
	public  virtual c_int OnSelectedRowCount()
	{
		return default;
	}
	public  virtual c_int OnColumnCount()
	{
		return default;
	}
	public  virtual c_int OnRowCount()
	{
		return default;
	}
	public  virtual void* OnSelectedColumns()
	{
		return default;
	}
	public  virtual void* OnSelectedRows()
	{
		return default;
	}
	public  virtual bool OnIsColumnSelected(c_int column)
	{
		return default;
	}
	public  virtual bool OnIsRowSelected(c_int row)
	{
		return default;
	}
	public  virtual bool OnSelectRow(c_int row)
	{
		return default;
	}
	public  virtual bool OnSelectColumn(c_int column)
	{
		return default;
	}
	public  virtual bool OnUnselectRow(c_int row)
	{
		return default;
	}
	public  virtual bool OnUnselectColumn(c_int column)
	{
		return default;
	}
	public  virtual void OnModelChange(void** event)
	{
	}
}
interface IQAccessibleTableInterface : IQtObjectInterface
{
}
extension CQt
{
	[LinkName("QAccessibleTableInterface_Delete")]
	public static extern void QAccessibleTableInterface_Delete(QAccessibleTableInterface_Ptr self);
	[LinkName("QAccessibleTableInterface_Caption")]
	public static extern void** QAccessibleTableInterface_Caption(void* self);
	
	public function void QAccessibleTableInterface_OnCaption_action(void* self);
	[LinkName("QAccessibleTableInterface_OnCaption")]
	public static extern void** QAccessibleTableInterface_OnCaption(void* self, QAccessibleTableInterface_OnCaption_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperCaption")]
	public static extern void** QAccessibleTableInterface_SuperCaption(void* self);
	[LinkName("QAccessibleTableInterface_Summary")]
	public static extern void** QAccessibleTableInterface_Summary(void* self);
	
	public function void QAccessibleTableInterface_OnSummary_action(void* self);
	[LinkName("QAccessibleTableInterface_OnSummary")]
	public static extern void** QAccessibleTableInterface_OnSummary(void* self, QAccessibleTableInterface_OnSummary_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperSummary")]
	public static extern void** QAccessibleTableInterface_SuperSummary(void* self);
	[LinkName("QAccessibleTableInterface_CellAt")]
	public static extern void** QAccessibleTableInterface_CellAt(void* self, c_int row, c_int column);
	
	public function void QAccessibleTableInterface_OnCellAt_action(void* self, c_int row, c_int column);
	[LinkName("QAccessibleTableInterface_OnCellAt")]
	public static extern void** QAccessibleTableInterface_OnCellAt(void* self, QAccessibleTableInterface_OnCellAt_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperCellAt")]
	public static extern void** QAccessibleTableInterface_SuperCellAt(void* self, c_int row, c_int column);
	[LinkName("QAccessibleTableInterface_SelectedCellCount")]
	public static extern c_int QAccessibleTableInterface_SelectedCellCount(void* self);
	
	public function void QAccessibleTableInterface_OnSelectedCellCount_action(void* self);
	[LinkName("QAccessibleTableInterface_OnSelectedCellCount")]
	public static extern c_int QAccessibleTableInterface_OnSelectedCellCount(void* self, QAccessibleTableInterface_OnSelectedCellCount_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperSelectedCellCount")]
	public static extern c_int QAccessibleTableInterface_SuperSelectedCellCount(void* self);
	[LinkName("QAccessibleTableInterface_SelectedCells")]
	public static extern void* QAccessibleTableInterface_SelectedCells(void* self);
	
	public function void QAccessibleTableInterface_OnSelectedCells_action(void* self);
	[LinkName("QAccessibleTableInterface_OnSelectedCells")]
	public static extern void* QAccessibleTableInterface_OnSelectedCells(void* self, QAccessibleTableInterface_OnSelectedCells_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperSelectedCells")]
	public static extern void* QAccessibleTableInterface_SuperSelectedCells(void* self);
	[LinkName("QAccessibleTableInterface_ColumnDescription")]
	public static extern libqt_string QAccessibleTableInterface_ColumnDescription(void* self, c_int column);
	
	public function void QAccessibleTableInterface_OnColumnDescription_action(void* self, c_int column);
	[LinkName("QAccessibleTableInterface_OnColumnDescription")]
	public static extern libqt_string QAccessibleTableInterface_OnColumnDescription(void* self, QAccessibleTableInterface_OnColumnDescription_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperColumnDescription")]
	public static extern libqt_string QAccessibleTableInterface_SuperColumnDescription(void* self, c_int column);
	[LinkName("QAccessibleTableInterface_RowDescription")]
	public static extern libqt_string QAccessibleTableInterface_RowDescription(void* self, c_int row);
	
	public function void QAccessibleTableInterface_OnRowDescription_action(void* self, c_int row);
	[LinkName("QAccessibleTableInterface_OnRowDescription")]
	public static extern libqt_string QAccessibleTableInterface_OnRowDescription(void* self, QAccessibleTableInterface_OnRowDescription_action _action);
	
	[LinkName("QAccessibleTableInterface_SuperRowDescription")]
	public static extern libqt_string QAccessibleTableInterface_SuperRowDescription(void* self, c_int row);
	[LinkName("QAccessibleTableInterface_SelectedColumnCount")]
	public static extern c_int QAccessibleTableInterface_SelectedColumnCount(void* self);
